Tue Apr 26 20:46:16 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_size): {Fixnum,Bignum}#size is unified into Integer.

	* bignum.c (rb_big_size_m): Don't define Bignum#size.

	* internal.h (rb_big_size_m): Declared.

Tue Apr 26 20:09:08 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_bit_length): {Fixnum,Bignum}#bit_length is
	  unified into Integer.

	* bignum.c (rb_big_bit_length): Don't define Bignum#bit_length.

	* internal.h (rb_big_bit_length): Declared.

Tue Apr 26 19:56:16 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_abs): Integer#{abs,magnitude} moved from
	  Fixnum and Bignum.

	* bignum.c (rb_big_abs): Don't define Bignum#{abs,magnitude}.

	* internal.h (rb_big_abs): Declared.

Mon Apr 25 14:39:11 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/rbconfig/sizeof/extconf.rb: just check the existence of each
	  types, to reduce configuration time, especially cross-compiling.

	* template/sizes.c.tmpl: calculate sizes of checked types at
	  compilation time.

Mon Apr 25 11:27:27 2016  Marcus Stollsteimer  <sto.mar@web.de>

	* doc/extension.rdoc: Improvements to english grammers.
	  [Bug #12246][ruby-core:74792][ci skip]

Mon Apr 25 11:17:50 2016  Marcus Stollsteimer  <sto.mar@web.de>

	* encoding.c: Fix return value of `Encoding::ISO8859_1.name`
	  [Bug #12313][ruby-core:75147][ci skip]
	* ext/bigdecimal/bigdecimal.c: Fix code sample of `BigDecimal.new`

Sun Apr 24 23:29:16 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* configure.in: add missing -lm for AIX.

Sun Apr 24 18:33:58 2016  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_insnhelper.c (INLINE): disable r54738 if __NO_INLINE__ is defined.
	  It caused "undefined reference to `vm_getivar'".

Sun Apr 24 09:32:12 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* test/ruby/test_array.rb: Add test cases for Array#sum with
	  non-numeric objects.

Sun Apr 24 04:21:27 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_insnhelper.c (INLINE): define as `inline` when it is optimized.