@@ -3968,13 +3968,6 @@ fix_lshift(long val, unsigned long width)
     return LONG2NUM(val);
 }
 
-/*
- * call-seq:
- *   fix >> count  ->  integer
- *
- * Shifts +fix+ right +count+ positions, or left if +count+ is negative.
- */
-
 static VALUE
 rb_fix_rshift(VALUE x, VALUE y)
 {
@@ -3999,6 +3992,25 @@ fix_rshift(long val, unsigned long i)
     }
     val = RSHIFT(val, i);
     return LONG2FIX(val);
+}
+
+/*
+ * call-seq:
+ *   int >> count  ->  integer
+ *
+ * Shifts +int+ right +count+ positions, or left if +count+ is negative.
+ */
+
+static VALUE
+rb_int_rshift(VALUE x, VALUE y)
+{
+    if (FIXNUM_P(x)) {
+	return rb_fix_rshift(x, y);
+    }
+    else if (RB_TYPE_P(x, T_BIGNUM)) {
+	return rb_big_rshift(x, y);
+    }
+    return Qnil;
 }
 
 /*
@@ -4682,7 +4694,7 @@ Init_Numeric(void)
     rb_define_method(rb_cFixnum, "[]", fix_aref, 1);
 
     rb_define_method(rb_cFixnum, "<<", rb_fix_lshift, 1);
-    rb_define_method(rb_cFixnum, ">>", rb_fix_rshift, 1);
+    rb_define_method(rb_cInteger, ">>", rb_int_rshift, 1);
 
     rb_define_method(rb_cInteger, "size", int_size, 0);
     rb_define_method(rb_cInteger, "bit_length", rb_int_bit_length, 0);
