@@ -1,3 +1,12 @@
+Tue Apr 26 20:59:40 2016  Tanaka Akira  <akr@fsij.org>
+
+	* numeric.c (rb_int_rshift): {Fixnum,Bignum}#>> is unified into
+	  Integer.
+
+	* bignum.c (rb_big_rshift): Don't define Bignum#>>.
+
+	* internal.h (rb_big_rshift): Declared.
+
 Tue Apr 26 20:46:16 2016  Tanaka Akira  <akr@fsij.org>
 
 	* numeric.c (int_size): {Fixnum,Bignum}#size is unified into Integer.
